    * 3978 FIX: mkbackup: Fixed backup to some CIFS shares ([Errno 13] Permission denied) '...')...

    Checks & Agents:
    * 3939 FIX: f5_bigip_conns: readded performance data and graphs...
    * 3979 FIX: vbox_guest: Only try to fetch VBox state in case the vboxguest module is loaded

    Multisite:
    * 3938 FIX: tactical overview: fixed wrong display of number of host/service problems...

    WATO:
    * 3975 FIX: Improved error handling when trying to edit not existing global setting
    * 3976 FIX: Fixed broken link in LDAP automatic sync help text
    * 3977 FIX: Fixed poping up changes button in sidebar snapin after a change

    Notifications:
    * 4042 FIX: Fix missing From address in synchronous SMTP notifications...


1.4.0i2p2:
    Multisite:
    * 4046 FIX: Repaired html rendering....


1.4.0i2p1:
    Multisite:
    * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...

    WATO:
    * 4038 FIX: Fix exception in WATO when adding a new host...
    * 4039 FIX: Fix UnicodeEncodeError exception in WATO folder display...
    * 4041 FIX: Fix exception when editing global configuration settings...


1.4.0i2:
    Core & Setup:
    * 4036 Measurement of time used by Check_MK now includes time waited for agent...
    * 3648 FIX: Fixed log file parsing of host states...
    * 3965 FIX: Nagios: Improved handling of broken core config...

    Checks & Agents:
    * 3841 cups_queues: thresholds are now configurable in WATO...
    * 3910 oracle_instance: noarchivelog can now be ignored
    * 3911 if.include: each operational state can now be mapped to a check state
    * 3912 elphase.include: now device states can be mapped to monitoring states
    * 3913 gude_powerbanks, gude_relayport, gude_temp, gude_humidity: new checks for Gude Power Control devices
    * 3954 postfix_mailq_status: new check which monitors the status of postfix mail instances