@@ -8,6 +8,7 @@
 
     Multisite:
     * 3938 FIX: tactical overview: fixed wrong display of number of host/service problems...
+    * 3980 FIX: Fixed possible flickering GUI when using Chrome and zooming the page
 
     WATO:
     * 3975 FIX: Improved error handling when trying to edit not existing global setting
